--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Homework Self-Project 01</title>
 </head>
 
 <body>
@@ -72,9 +72,9 @@
         </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h2>Made with ❤️️ by Timothy Murphy</h2>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+            &copy; 2022 Horiseon Social Solution Services, Inc.
         </p>
     </div>
 </body>
