updating page title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Homework Self-Project 01</title>
+    <title>Horiseon Social Solution Services, Inc.</title>
 </head>
 
 <body>
