final changes for homework assigment 01

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!--Tooltip styling-->
+    <!--Tooltip styling | text and position-->
     <style>
         /*Tooltip | container*/
         .tooltip {
