final changes for first homework assignment

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!--Tooltip styling | text and position-->
     <style>
-        /*Tooltip | container*/
+        /*Tooltip | main box*/
         .tooltip {
           position: relative;
           display: inline-block;
